<resources>
    <string name="app_name">Search in the base FSSP</string>
    <string name="error_textview_stub">Error</string>
    <string name="reload_button">Reload</string>
    <string name="undefined_error">Undefined error</string>
    <string name="empty_server_response_on_success">Response from server is empty</string>
    <string name="button_search">Search</string>
    <string name="search_lastname_hint">Lastname*</string>
    <string name="search_firstname_hint">Firstname*</string>
    <string name="search_secondname_hint">Secondname</string>
    <string name="delete_description">X</string>
    <string name="search_region_hint">Region</string>
    <string name="search_birth_hint">Date of birth</string>
    <string name="region" translatable="false">"10 Республика Карелия"</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="secondname">Secondname</string>
    <string name="birthdate">Birthdate</string>
    <string name="regionLabel">Region</string>
    <string name="task" translatable="false">Task</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="preference_file_key" translatable="false">settings</string>
    <string name="saved_default_key" translatable="false"> </string>
    <string name="dialog_title_device_is_offline">No internet connection</string>
    <string name="dialog_message_device_is_offline">You can not use app without internet connection. Please, check
        internet connection.
    </string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_title_stub">Undefined error</string>
    <string name="viewmodel_is_null" translatable="false">The ViewModel should be initialised first</string>
    <string name="dialog_tittle_sorry">Sorry</string>
    <string name="menu_title_history">History</string>
    <string name="error_lastname">Enter surname</string>
    <string name="error_firstname">Enter firstname</string>
    <string name="error_region">Enter region</string>
    <string name="error_cyrillic">Enter name using Cyrillic </string>
</resources>