<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="505dp"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_marginBottom="@dimen/margin_xxx_large">

    <TextView
        android:id="@+id/search_button_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewButtonStyle"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/button_search"
        android:layout_gravity="end"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_xxxx_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/search_lastname_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/BaseEditTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_xxxx_small"
        android:layout_marginBottom="@dimen/margin_xxxx_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"

        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstname_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/search_firstname_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect"
                style="@style/BaseEditTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_xxxx_small"
        android:layout_marginBottom="@dimen/margin_xxxx_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/secondname_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/search_secondname_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/BaseEditTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_xxxx_small"
        android:layout_marginBottom="@dimen/margin_xxxx_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthdate_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/search_birth_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthdate_edit_text"
                style="@style/BaseEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_xxxx_small"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/region_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/search_region_hint">

            <AutoCompleteTextView
                android:id="@+id/region_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

</LinearLayout>
